[package]
name = "freelance-marketplace-auth"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.6", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
mongodb = { version = "3.2.3" }
dotenv = "0.15"
config = "0.13"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0.98"
chrono = { version ="0.4.41", features = ["serde"] }
async-trait = "0.1.88"
